fixed nav bar looks on ios and other minor styling fixes

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
     --secondary-color: white;
     --comment-line-color: white;
     --font-color:black;
+    --safe-area-inset-bottom: env(safe-area-inset-bottom)
 }
 
 *,*:focus,*:hover{
