--- a/src/features/posts/PostsList/PostsList.css
+++ b/src/features/posts/PostsList/PostsList.css
@@ -54,7 +54,7 @@ html {
 .profile-flex-container {
     display: flex;
     align-items: center;
-    margin-bottom: 3vh
+    margin-bottom: 2vh
 }
 
 .dp {
