--- a/src/features/posts/SinglePost/SinglePost.css
+++ b/src/features/posts/SinglePost/SinglePost.css
@@ -108,6 +108,7 @@
 
     .single-post-container h1 {
         font-size: calc(3*var(--height));
+        margin-bottom: calc(5*var(--height));
         padding: calc(2*var(--height));
     }
 
